@@ -1,7 +1,14 @@
+1998-08-20  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* ObjectLoader.[hm] ([ObjectLoader +load:fromAppConfigFileNamed:]): 
+	New method.
+
+	* simtools.h (ObjectLoader): Add it.
+
 1998-08-19  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* ObjectLoader.[hm] ([ObjectLoader +load:fromAppConfigFileNamed:]),
-	simtools.h (ObjectLoader): New method.
+	simtools.h (ObjectLoader): Add it.
 
 	* UName.[hm], simtools.m: Rename NoBaseNameForUName to UNameError.
 
